fix projects section alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ a.home-link {
 }
 
 .code-logo {
-	font-size: 135px;
+	font-size: 3.85em;
 	color:#fff;
 	text-align:center;
 
